--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '3.8'
-
 services:
-  php:
+  web:
     image: php:apache
-    container_name: php-container
+    container_name: php-apache-container
     volumes:
       - ./src:/var/www/html
     ports:
@@ -13,20 +11,30 @@ services:
     # Väldigt irriterande att detta command måste köras 
     # varje gång jag bygger containern, tar tid, men hittar ingen annan lösning.
     command: bash -c "docker-php-ext-install mysqli && docker-php-ext-enable mysqli && apache2-foreground"
-
   mysql:
     image: mysql:latest
     container_name: mysql-container
+    ports:
+      - "3307:3306"
+    networks:
+      - app-network
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: mydatabase
       MYSQL_USER: user
       MYSQL_PASSWORD: userpassword
-    ports:
-      - "3307:3306"
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
     networks:
       - app-network
-
+    container_name: phpmyadmin-container
+    ports:
+      - "8081:80"
+    environment:
+      PMA_HOST: mysql
+      MYSQL_ROOT_PASSWORD: rootpassword
+    depends_on:
+      - mysql
 networks:
   app-network:
     driver: bridge
