--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,4 @@
 RewriteEngine On
-RewriteBase /src/
-RewriteRule ^index\\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /src/index.php [L]
+RewriteRule ^ index.php [L]
